--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,93 @@
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+@import url(https://fonts.googleapis.com/css?family=Lobster+Two:700italic);
 
-/* 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+body{
+    background: url(https://wallpaperaccess.com/full/869.jpg) no-repeat center center;
+    background-size: cover;
+    height: 100vh;
+}
+#myGame{
+        
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 10px solid rebeccapurple;
+        height: 98vh;
+        width: 202vh;
+        position: relative;
+        cursor: pointer;
+        overflow: hidden;
+        animation: infinite resplandorAnimation2 2s;
+        border-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E %3Cstyle%3Epath%7Banimation:stroke 5s infinite linear%3B%7D%40keyframes stroke%7Bto%7Bstroke-dashoffset:776%3B%7D%7D%3C/style%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%232d3561' /%3E%3Cstop offset='25%25' stop-color='%23c05c7e' /%3E%3Cstop offset='50%25' stop-color='%23f3826f' /%3E%3Cstop offset='100%25' stop-color='%23ffb961' /%3E%3C/linearGradient%3E %3Cpath d='M1.5 1.5 l97 0l0 97l-97 0 l0 -97' stroke-linecap='square' stroke='url(%23g)' stroke-width='3' stroke-dasharray='388'/%3E %3C/svg%3E") 1;
 
-*/
+    }
+/*animaciones colores*/
+
+@keyframes resplandorAnimation {
+    /*resplandor verde*/
+    0%,100%{box-shadow: 0px 0px 10px 12px rgb(31, 255, 206);}
+    50%{box-shadow: 0px 0px 5px 8px rgb(31, 255, 206);}}
+@keyframes resplandorAnimation2 {
+    /*resplandor verde*/
+    0%,100%{box-shadow: 0px 0px 10px 12px rgb(31, 255, 206);}
+    50%{box-shadow: 0px 0px 5px 8px rgb(16, 167, 134);}   }
+@keyframes resplandorAnimationCard {
+    /*resplandor verde*/
+    0%,100%{box-shadow: 0px 0px 3px 4px rgb(31, 255, 206);}
+    50%{box-shadow: 0px 0px 2px 2px rgb(16, 167, 134);}   }
+
+/*BOTON START Y TEXTO*/
+
+.atari {
+    font-family: 'press start 2p';
+    font-size: 20px;
+    margin-top: 5%;
+    text-align: center;
+    color: rgba(white, .9);
+    text-shadow: 0 .1em 0 rgb(31, 255, 206);
+    background-color: rgba(black, .3);}
+
+/*https://codepen.io/maxakohler/pen/DgvaKP*/
+
+
+#btn{
+    width: 8%;
+    height: 6%;
+    border: 1%;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    animation: animacion 2s linear infinite;
+    animation: infinite resplandorAnimation 2s;
+}
+
+/*-------------------------------------------------------------- FONDO JUEGO ----------------------------------------------------------/*/
+          
+.bodyCard{
+    width:14vh;
+    height:24vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    border: .6vh solid #25685f;
+    background: url(https://thumbs.dreamstime.com/b/fondo-que-se-estremece-del-arte-pixel-104198299.jpg);
+    background-size: cover;
+    animation: infinite resplandorAnimationCard 2s;
+}
+
+.onCard{
+   font-size: 12vh;
+   text-align: center;
+   margin: auto;
+   
+}
+
