--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,7 @@ body{
     background: url(https://wallpaperaccess.com/full/869.jpg) no-repeat center center;
     background-size: cover;
     height: 100vh;
+    
 }
 #myGame{
         
@@ -42,8 +43,16 @@ body{
     0%,100%{box-shadow: 0px 0px 3px 4px rgb(31, 255, 206);}
     50%{box-shadow: 0px 0px 2px 2px rgb(16, 167, 134);}   }
 
-/*BOTON START Y TEXTO*/
 
+/*BOTON START Y TEXTO*/
+.atariscore{
+    font-size: 14px;
+    border-radius: 5%;
+    background: grey;
+    font-family: 'press start 2p';
+    text-shadow: 0 .1em 0 rgb(31, 255, 206);
+    background-color: rgba(black, .3);
+}
 .atari {
     font-family: 'press start 2p';
     font-size: 20px;
@@ -71,6 +80,12 @@ body{
 
 /*-------------------------------------------------------------- FONDO JUEGO ----------------------------------------------------------/*/
           
+/*Animation Cards*/
+
+@keyframes resplandorAnimationCard {
+    /*resplandor verde*/
+    0%,100%{box-shadow: 0px 0px 3px 4px rgb(31, 255, 206);}
+    50%{box-shadow: 0px 0px 2px 2px rgb(16, 167, 134);}   }
 .bodyCard{
     width:14vh;
     height:24vh;
@@ -83,7 +98,17 @@ body{
     background-size: cover;
     animation: infinite resplandorAnimationCard 2s;
 }
+.frontCard{
+    width:14vh;
+    height:24vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    border: .6vh solid #25685f;
+    background-color: rgb(31, 255, 206)
 
+}
 .onCard{
    font-size: 12vh;
    text-align: center;
